CXBOX-1341 | Fixed.Fixed parent_id